Grid-system setup

--- a/grantcreates.html
+++ b/grantcreates.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-
-    <head>
-
-        <meta charset="utf-8">
-
-        <title>
-            Grant Creates
-        </title>
-        <style>
-    
-        </style>
-        <link rel = "stylesheet" type="text/css" href="./grantcreates.css">
-
-    </head>     
-
-    <body>
-        <h1>
-            Coming Soon!
-        </h1> 
-        <h2>
-            Grant's Portfolio Site
-        </h2>
-        <p id="id">
-            <i>This site will be updating consistently as my skills progress.</i>
-        </p>
-        <p class="gefahr">
-            Mlkshk cronut meditation woke. Woke vinyl hammock pabst adaptogen actually chicharrones, tofu whatever umami. 
-            <span>adaptogen quinoa waistcoat, fashion axe meggings brooklyn man braid sustainable narwhal gentrify.</span>
-            Fanny pack ugh fixie, direct trade fingerstache organic man braid stumptown enamel pin post-ironic franzen art party brunch health goth. 
-            Flannel cray butcher fingerstache, brunch ugh man braid ethical whatever. Keffiyeh offal crucifix food truck gochujang enamel pin vaporware cornhole health goth four loko. 
-            Helvetica authentic bushwick, unicorn taiyaki tacos art party hot chicken.
-        </p>
-    </body>
-
-</html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="grantcreates.css">
+    <style></style>
+    <style></style>
+</head>
+<body>
+    <nav>
+        <div class="navlogo">
+            <a><img src="" alt=""></a>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-2"></div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-6"></div>
+        </div>
+    </div>
+</body>
