Header navigation first iteration.

--- a/grantcreates.html
+++ b/grantcreates.html
@@ -3,13 +3,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="grantcreates.css">
-    <style></style>
+    <style>@import url('https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap');</style>
     <style></style>
 </head>
 <body>
-    <nav>
-        <div class="navlogo">
-            <a><img src="" alt=""></a>
+    <nav class="header-nav">
+        <div class="nav-logo">
+            <a href="grantcreates.html"><img src="grantcreates_logo_Busines Cards.png" alt="my logo" class="logo-static"></a>
+            <img src="grantcreates_logo_type_Busines Cards.png" alt="part of my logo" class="logo-animate">
+        </div>
+        <div class="contact">
+            contact
+        </div>
+        <div class="email-phone">
+            <br>email: grant@grantcreates.com<br>
+            <br>phone: +1 (310) 953-5718<br>
+            <br>
         </div>
     </nav>
     <div class="container">
