--- a/grantcreates.html
+++ b/grantcreates.html
@@ -21,9 +21,16 @@
             <br>
         </div>
     </nav>
+    <header>
+        hi, i'm grant. this site is the first of many software projects i'll be posting. here's a game of .... while you wait for more. thanks for checking in! 
+    </header>
     <div class="container">
         <div class="row">
-            <div class="col-1"></div>
+            <div class="col-1">
+                <div class="selector">
+                    
+                </div>
+            </div>
             <div class="col-1"></div>
             <div class="col-1"></div>
             <div class="col-1"></div>
