website: had to change filenames on pics and update html css with new names. Pushing pics as well.

--- a/grantcreates.html
+++ b/grantcreates.html
@@ -9,8 +9,8 @@
 <body>
     <nav class="header-nav">
         <div class="nav-logo">
-            <a href="grantcreates.html"><img src="grantcreates_logo_Busines Cards.png" alt="my logo" class="logo-static"></a>
-            <img src="grantcreates_logo_type_Busines Cards.png" alt="part of my logo" class="logo-animate">
+            <a href="grantcreates.html"><img src="grantcreates_logo_static.png" alt="my logo" class="logo-static"></a>
+            <img src="grantcreates_logo_animate.png" alt="part of my logo" class="logo-animate">
         </div>
         <div class="contact">
             contact
