Site is basically finished!

--- a/grantcreates.html
+++ b/grantcreates.html
@@ -21,14 +21,18 @@
             <br>
         </div>
     </nav>
+    <div id="email-phone-mobile">
+        email: grant@grantcreates.com<br>
+        <br>phone: +1 (310) 953-5718<br>
+    </div>
     <header class="bio">
-        hi, i'm grant. this site and controller are the first of many software projects i'll be posting. thanks for checking in! 
+        hi, i'm grant. this site and controller are the first of many projects i'll be posting. thanks for checking in! 
     </header>
     <div class="container keys">
         <div class="row">
             <div class="col-6">
                 <div class="instructions">
-                        use your mouse or keyboard to make a beat!<br> hover over this box to see keys and sounds.
+                        use your keyboard to make a beat!<br> hover over this box to see keys and sounds.
                 </div>
                 <div class="instructions-mobile">
                         tap on the controller to make a beat!
@@ -134,7 +138,7 @@
                 </div>
             </div>
         </div>
-
+        
 
 
 </body>
