--- a/grantcreates.html
+++ b/grantcreates.html
@@ -9,8 +9,8 @@
 <body>
     <nav class="header-nav">
         <div class="nav-logo">
-            <a href="grantcreates.html"><img src="grantcreates_logo_static.png" alt="my logo" class="logo-static"></a>
-            <img src="grantcreates_logo_animate.png" alt="part of my logo" class="logo-animate">
+            <a href="grantcreates.html"><img src="pictures/grantcreates_logo_static.png" alt="my logo" class="logo-static"></a>
+            <img src="pictures/grantcreates_logo_animate.png" alt="part of my logo" class="logo-animate">
         </div>
         <div class="contact">
             contact
@@ -21,10 +21,6 @@
             <br>
         </div>
     </nav>
-    <div id="email-phone-mobile">
-        email: grant@grantcreates.com<br>
-        <br>phone: +1 (310) 953-5718<br>
-    </div>
     <header class="bio">
         hi, i'm grant. this site and controller are the first of many projects i'll be posting. thanks for checking in! 
     </header>
@@ -45,7 +41,7 @@
                 <div class="col-2">                                
                         <div class="beat tink">
                                 <audio data-key="87" src="sounds/tink.wav" id="tink"></audio>
-                                <img data-key="87" src="beatlightup.png" alt="when you hit the beat pad" class="tink">
+                                <img data-key="87" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="tink">
                                 <div class="single-keys">
                                     <h1>W</h1>
                                     <p>tink</p>
@@ -55,7 +51,7 @@
                 <div class="col-2">
                     <div class="beat ride">
                         <audio data-key="69" src="sounds/ride.wav" id="ride"></audio>
-                        <img data-key="69" src="beatlightup.png" alt="when you hit the beat pad" class="ride">
+                        <img data-key="69" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="ride">
                         <div class="single-keys">
                             <h1>E</h1>
                             <p>ride</p>
@@ -65,7 +61,7 @@
                 <div class="col-2">
                     <div class="beat openhat">
                         <audio data-key="82" src="sounds/openhat.wav" id="openhat"></audio>
-                        <img data-key="82" src="beatlightup.png" alt="when you hit the beat pad" class="openhat">
+                        <img data-key="82" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="openhat">
                         <div class="single-keys">
                             <h1>R</h1>
                             <p>openhat</p>
@@ -77,7 +73,7 @@
                 <div class="col-2">
                     <div class="beat clap">
                         <audio data-key="83" src="sounds/clap.wav" id="clap"></audio>
-                        <img data-key="83" src="beatlightup.png" alt="when you hit the beat pad" class="clap">
+                        <img data-key="83" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="clap">
                         <div class="single-keys">
                             <h1>S</h1>
                             <p>clap</p>
@@ -87,7 +83,7 @@
                 <div class="col-2">
                     <div class="beat hihat">
                         <audio data-key="68" src="sounds/hihat.wav" id="hihat"></audio>
-                        <img data-key = "68" src="beatlightup.png" alt="when you hit the beat pad" class="hihat">
+                        <img data-key = "68" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="hihat">
                         <div class="single-keys">
                             <h1>D</h1>
                             <p>hihat</p>
@@ -97,7 +93,7 @@
                 <div class="col-2">
                     <div class="beat snare">
                         <audio data-key="70" src="sounds/snare.wav" id="snare"></audio>
-                        <img data-key="70" src="beatlightup.png" alt="when you hit the beat pad" class="snare">
+                        <img data-key="70" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="snare">
                         <div class="single-keys">
                             <h1>F</h1>
                             <p>snare</p>
@@ -109,7 +105,7 @@
                 <div class="col-2">
                     <div class="beat kick">
                         <audio src="sounds/kick.wav" data-key="88" id="kick"></audio>
-                        <img data-key="88" src="beatlightup.png" alt="when you hit the beat pad" class="kick">
+                        <img data-key="88" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="kick">
                         <div class="single-keys">
                             <h1>X</h1>
                             <p>kick</p>
@@ -119,7 +115,7 @@
                 <div class="col-2 ">
                     <div class="beat tom">
                         <audio src="sounds/tom.wav" data-key="67" id="tom"></audio>
-                        <img data-key="67" src="beatlightup.png" alt="when you hit the beat pad" class="tom">
+                        <img data-key="67" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="tom">
                         <div class="single-keys">
                             <h1>C</h1>
                             <p>tom</p>
@@ -129,7 +125,7 @@
                 <div class="col-2 ">
                     <div class="beat boom">
                         <audio src="sounds/boom.wav" data-key="86" id="boom"></audio>
-                        <img data-key="86" src="beatlightup.png" alt="when you hit the beat pad" class="boom">
+                        <img data-key="86" src="pictures/beatlightup.png" alt="when you hit the beat pad" class="boom">
                         <div class="single-keys">
                             <h1>V</h1>
                             <p>boom</p>
@@ -138,7 +134,5 @@
                 </div>
             </div>
         </div>
-        
-
-
+    
 </body>
