restructured the javascript file to use more document eventlisteners instead of windoweventlisteners

--- a/grantcreates.html
+++ b/grantcreates.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="grantcreates.css">
     <style>@import url('https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap');</style>
-    <script src="grantcreates.js"></script>
 </head>
 <body>
     <nav class="header-nav">
@@ -12,7 +11,7 @@
             <a href="grantcreates.html"><img src="pictures/grantcreates_logo_static.png" alt="my logo" class="logo-static"></a>
             <img src="pictures/grantcreates_logo_animate.png" alt="part of my logo" class="logo-animate">
         </div>
-        <div class="contact">
+        <div id="contact">
             contact
         </div>
         <div id="email-phone">
@@ -27,10 +26,10 @@
     <div class="container keys">
         <div class="row">
             <div class="col-6">
-                <div class="instructions">
+                <div id="instructions">
                         use your keyboard to make a beat!<br> hover over this box to see keys and sounds.
                 </div>
-                <div class="instructions-mobile">
+                <div id="instructions-mobile">
                         tap on the controller to make a beat!
                 </div>
             </div>
@@ -134,5 +133,5 @@
                 </div>
             </div>
         </div>
-    
+        <script src="grantcreates.js"></script>
 </body>
